--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,4 +1,21 @@
-<form>
-    <input type="text" placeholder="Username">
-    <input type="text" placeholder="Password">
-</form>
+<div class="center">
+    <div class="center">
+        <h1>UBER</h1>
+        <h5>PROCEED WITH YOUR ACCOUNT</h5>
+        <h3>Log in</h3>
+    </div>
+    <form [formGroup]="loginForm" (ngSubmit)="loginUser()" class="oneElementPerRow">
+        <label>Username</label>
+        <mat-form-field class="oneLine">
+            <mat-label>Username</mat-label>
+            <input matInput type="text" name="username" formControlName="username" />
+        </mat-form-field>
+        <label>Password</label>
+        <mat-form-field class="oneLine">
+            <mat-label>Password</mat-label>
+            <input matInput type="password" name="password" formControlName="password" />
+        </mat-form-field>
+        <button type="submit" mat-raised-button>Log in</button>
+    </form>
+    <a routerLink="/register-account" routerLinkActive="active">DON'T HAVE AN ACCOUNT? REGISTER NOW.</a>
+</div>
