Add redirecting to registration

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -17,5 +17,6 @@
         </mat-form-field>
         <button type="submit" mat-raised-button>Log in</button>
     </form>
-    <a routerLink="/register-account" routerLinkActive="active">DON'T HAVE AN ACCOUNT? REGISTER NOW.</a>
+   <a routerLink="/register-account" routerLinkActive="active">DON'T HAVE AN ACCOUNT? REGISTER NOW.</a>
+   <!--<button class="btn btn-primary" (click)="goToRegister()">DON'T HAVE AN ACCOUNT? REGISTER NOW.</button>-->
 </div>
