--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -34,6 +34,10 @@ button {
     background-color: #405241;
   }
 
+  a {
+    color: #070707;
+  }
+
   @media (min-width: 850px) {
     label{
         display: block;
