--- a/src/app/components/toolbar/toolbar.component.css
+++ b/src/app/components/toolbar/toolbar.component.css
@@ -2,6 +2,10 @@
   background-color: black;
 }
 
+mat-toolbar{
+  margin-bottom: 10vh;
+}
+
 .example-spacer {
   flex: 1 1 auto;
 }
@@ -17,4 +21,8 @@
 .center-text {
   margin: 0 auto;
   /* text-align: center; */
+}
+
+.bigger-text {
+  font-size: larger;
 }
