--- a/src/app/components/toolbar/toolbar.component.html
+++ b/src/app/components/toolbar/toolbar.component.html
@@ -1,7 +1,10 @@
 <mat-toolbar class="toolbar_color">
-  <span class="white-text">UBER</span>
+  <!--<span class="white-text">UBER</span>-->
+  <button mat-button class="white-text bigger-text" [routerLink]="['/home']">
+    UBER
+  </button>
   <span class="example-spacer"></span>
-  <button mat-button class="white-text">
+  <button mat-button class="white-text" [routerLink]="['/login']">
     Log in
     <mat-icon>favorite</mat-icon>
   </button>
