--- a/src/app/components/register-account/register-account.component.html
+++ b/src/app/components/register-account/register-account.component.html
@@ -1,3 +1,10 @@
+<div class="app-reg-instruction"> 
+  <h2>Welcome to UBER</h2>
+</div>
+<div class="app-reg-instruction"> 
+  <p>MAKE A NEW ACCOUNT</p>
+</div>
+
 <form [formGroup]="registerAccountForm" (ngSubmit)="registerAccount()" fxLayout="column">
     <div class="app-reg-col" >
         <p>Personal</p>
@@ -27,8 +34,9 @@
         </mat-form-field>
     </div>
     <div fxLayout="row" fxLayoutAlign="space-between end">
-      <button color="primary" type="submit" mat-raised-button>Create account</button>
+      <button color="primary" type="submit" mat-raised-button>CREATE ACCOUNT</button>
     </div>
+    <a class="app-reg-instruction" routerLink="/login" routerLinkActive="active">ALREADY HAVE AN ACCOUNT? LOG IN HERE</a>
 
   </form>
   
