Fix bottom padding on Register component

--- a/src/app/components/register-account/register-account.component.css
+++ b/src/app/components/register-account/register-account.component.css
@@ -50,6 +50,7 @@ button:hover {
   background-color: #405241 !important;
 }
 
-a {
-  color: #070707;
+.app-page-padding-bottom {
+  padding-bottom: 10vh;
+  display: block;
 }
