Refactor component packaging for user account information

--- a/src/app/components/user-account/basic-user-information/basic-user-information.component.html
+++ b/src/app/components/user-account/basic-user-information/basic-user-information.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <img src={{imageSrc}} alt="profilePicture">
-    <mat-icon class="icon" onclick="changePicture()">add_photo_alternate</mat-icon>
+    <mat-icon class="icon" onclick="changePicture()">edit</mat-icon>
     <!--<button class="btn">Button</button>-->
 </div>
 <form [formGroup]="changingInformationForm" (ngSubmit)="submitChanges()" class="oneElementPerRow">
