--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -31,7 +31,7 @@ button {
   
   /* Add a background color to the submit button on mouse-over */
   button:hover {
-    background-color: #405241;
+    background-color: #6A7A9E;
   }
 
   a {
