--- a/src/app/components/user-account/driver-user-info/driver-user-info.component.css
+++ b/src/app/components/user-account/driver-user-info/driver-user-info.component.css
@@ -3,15 +3,14 @@
     flex-flow: row wrap;
     justify-content: flex-end;
 }
-.basic-info{
+.flex-elem{
     width: 50%;
     margin-bottom: 5vh;
 }
 
 @media (max-width: 850px) {
-    .basic-info{
+    .flex-elem{
         width: 100%;
         margin-bottom: 5vh;
     }
 }
-
