Add vechicle component

--- a/src/app/components/user-account/driver-documents/driver-documents.component.html
+++ b/src/app/components/user-account/driver-documents/driver-documents.component.html
@@ -1,1 +1,4 @@
-<p>driver-documents works!</p>
+<h2>Documents</h2>
+<!--<div *ngFor="let document of documents">
+    <p>{{document.name}}<a>{{document.picture}}</a></p>
+</div>-->
