--- a/src/app/components/user-account/driver-user-info/driver-user-info.component.css
+++ b/src/app/components/user-account/driver-user-info/driver-user-info.component.css
@@ -7,9 +7,18 @@
     width: 50%;
     margin-bottom: 5vh;
 }
+.flex-elem2{
+    width: 50%;
+    margin-bottom: 5vh;
+}
 
 @media (max-width: 850px) {
     .flex-elem{
+        width: 100%;
+        margin-bottom: 5vh;
+    }
+
+    .flex-elem2{
         width: 100%;
         margin-bottom: 5vh;
     }
