--- a/src/app/components/user-account/driver-vechicle/driver-vechicle.component.css
+++ b/src/app/components/user-account/driver-vechicle/driver-vechicle.component.css
@@ -1,6 +1,7 @@
 .container {
     position: relative;
-    width: 75%;
+    width: 85%;
+    display: flex;
     margin-left: auto;
     margin-right: auto;
   }
@@ -14,4 +15,38 @@
   h2{
     font-size: 4vh;
     margin-bottom: 4vh;
+  }
+
+  .flex-elem{
+    width: 40%;
+    margin-bottom: 5vh;
+  }
+  
+  .flex-elem2{
+    width: 50%;
+    padding-left: 4vh;
+  }
+  
+  .oneLine{
+    width: 100%;
+  }
+
+  button{
+    position: absolute;
+    top: 88%;
+    left: 79%;background-color: black;
+    color: white;
+  }
+  button:hover {
+    background-color: #6A7A9E;
+  }
+
+  @media (max-width: 850px){
+    .container {
+      position: relative;
+      width: 75%;
+      display: flex;
+      margin-left: auto;
+      margin-right: auto;
+    }
   }
