--- a/src/app/components/book-ride/book-ride.component.css
+++ b/src/app/components/book-ride/book-ride.component.css
@@ -1,3 +1,80 @@
 body {
   background-color: #EAECE9;
 }
+
+.main-content {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  width: 100%;
+  padding: 0 0 50px 0;
+}
+
+.left-part {
+  display: flex;
+  flex-direction: column;
+  /* justify-content: space-between; */
+}
+
+.estimated-data {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  background-color: white;
+  padding: 20px 30px;
+  align-items: center;
+  margin-top: 5px;
+}
+
+.estimated-data .data p {
+  margin: 0;
+}
+
+.right-part {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.form-part {
+  display: flex;
+  flex-direction: column;
+}
+
+.params-part {
+  display: flex;
+  flex-direction: column;
+  padding: 15px;
+  background-color: white;
+}
+
+.param {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 100%;
+}
+
+#inv-btn {
+  background-color: #D9D9D9;
+  margin: 5px 0 10px 0;
+}
+
+#book-btn {
+  background-color: #24ED80;
+}
+
+.mat-form-field-appearance-outline .mat-form-field-outline {
+  background-color: white;
+  border-radius: 5px;
+}
+
+.mat-form-field-wrapper {
+  padding: 0 0 5px 0;
+}
+
+/* .select-and-date {
+  margin-bottom: 30px;
+} */
