Create map component and add boilerplate code

--- a/src/app/components/book-ride/book-ride.component.css
+++ b/src/app/components/book-ride/book-ride.component.css
@@ -17,6 +17,12 @@ body {
   /* justify-content: space-between; */
 }
 
+.map-container {
+  width: 100%;
+  min-width: 600px;
+  height: 60vh;
+}
+
 .estimated-data {
   display: flex;
   flex-direction: row;
