--- a/src/app/components/book-ride/book-ride.component.html
+++ b/src/app/components/book-ride/book-ride.component.html
@@ -1,8 +1,8 @@
 <div class="main-content">
   
   <div class="left-part">
-    <div>
-      <img src="assets/map.png" alt="nesto">
+    <div class="map-container">
+      <app-map></app-map>
     </div>
     <div class="estimated-data">
       <div class="data">
