--- a/src/app/components/landing-page/landing-page.component.css
+++ b/src/app/components/landing-page/landing-page.component.css
@@ -3,6 +3,11 @@ body {
   background-color: #EAECE9;
 }
 
+.map-container {
+  width: 60%;
+  height: 70vh;
+}
+
 .mat-form-field-appearance-outline .mat-form-field-outline {
   background-color: white;
   border-radius: 5px;
