--- a/src/app/components/landing-page/landing-page.component.html
+++ b/src/app/components/landing-page/landing-page.component.html
@@ -1,6 +1,7 @@
 <div class="main-landing">
-  <div>
-    <img src="assets/map.png" alt="nesto">
+  <div class="map-container">
+    <!-- <img src="assets/map.png" alt="nesto"> -->
+    <app-map></app-map>
   </div>
 
   <div class="right-form">
