Add map to landing page

--- a/src/app/components/landing-page/landing-page.component.css
+++ b/src/app/components/landing-page/landing-page.component.css
@@ -34,6 +34,15 @@ body {
   margin: 0 30px;
 }
 
+.form-container {
+  display: flex;
+  flex-direction: column;
+}
+
+.submit-btn {
+  background-color: #24ED80;
+}
+
 .calculated-data {
   margin-top: auto;
   display: flex;
