--- a/src/app/components/landing-page/landing-page.component.html
+++ b/src/app/components/landing-page/landing-page.component.html
@@ -7,26 +7,29 @@
   <div class="right-form">
     <div class="form-params">
       <p class="form-title">Check out time and price<br> for your route</p>
-      <mat-form-field appearance="outline">
-        <mat-label>Departure</mat-label>
-        <mat-icon matPrefix class="input-icon">location_on</mat-icon>
-        <input matInput>
-      </mat-form-field>
-      <mat-form-field>
-        <mat-label>Destination</mat-label>
-        <mat-icon matPrefix class="input-icon">flag</mat-icon>
-        <input matInput>
-      </mat-form-field>
+      <form [formGroup]="estimateDataFormGroup" class="form-container" (ngSubmit)="estimate()">
+        <mat-form-field appearance="outline">
+          <mat-label>Departure</mat-label>
+          <mat-icon matPrefix class="input-icon">location_on</mat-icon>
+          <input matInput name="departure" formControlName="departure">
+        </mat-form-field>
+        <mat-form-field>
+          <mat-label>Destination</mat-label>
+          <mat-icon matPrefix class="input-icon">flag</mat-icon>
+          <input matInput name="destination" formControlName="destination">
+        </mat-form-field>
+        <button mat-button type="submit" class="submit-btn">Estimate</button>
+      </form>
     </div>
 
     <div class="calculated-data">
       <div class="data">
         <p>Estimated time: </p>
-        <p>80min</p>
+        <p>{{estimated_time}}min</p>
       </div>
       <div class="data">
         <p>Estimated price: </p>
-        <p>$80</p>
+        <p>${{estimated_price}}</p>
       </div>
     </div>
   </div>
