--- a/src/app/components/register-account/register-account.component.css
+++ b/src/app/components/register-account/register-account.component.css
@@ -47,7 +47,7 @@ h2 {
 }
 
 button:hover {
-  background-color: #405241 !important;
+  background-color: #6A7A9E !important;
 }
 
 .app-page-padding-bottom {
