--- a/src/app/components/register-account/register-account.component.html
+++ b/src/app/components/register-account/register-account.component.html
@@ -19,11 +19,11 @@
             </mat-form-field>
             <mat-form-field>
               <mat-label>Last Name</mat-label>
-              <input matInput type="text" name="lastName" formControlName="lastName" />
+              <input matInput type="text" name="surname" formControlName="surname" />
             </mat-form-field>
             <mat-form-field>
               <mat-label>Phone Number</mat-label>
-              <input matInput type="text" name="phone" formControlName="phone" />
+              <input matInput type="text" name="telephoneNumber" formControlName="telephoneNumber"/>
             </mat-form-field>
       </div>
       
