--- a/src/app/components/book-ride/book-ride.component.html
+++ b/src/app/components/book-ride/book-ride.component.html
@@ -6,26 +6,29 @@
     </div>
     <div class="estimated-data">
       <div class="data">
-        <p>Estimated time: 80min</p>
+        <p>Estimated time: {{estimated_time}}min</p>
       </div>
       <div class="data">
-        <p>Estimated price: $80</p>
+        <p>Estimated price: ${{estimated_price}}</p>
       </div>
     </div>
   </div>
 
   <div class="right-part">
     <div class="form-part">
-      <mat-form-field appearance="outline" class="target">
-        <mat-label>Departure</mat-label>
-        <mat-icon matPrefix class="input-icon">location_on</mat-icon>
-        <input matInput>
-      </mat-form-field>
-      <mat-form-field>
-        <mat-label>Destination</mat-label>
-        <mat-icon matPrefix class="input-icon">flag</mat-icon>
-        <input matInput>
-      </mat-form-field>
+      <form [formGroup]="estimateDataFormGroup" class="form-container" (ngSubmit)="estimate()">
+        <mat-form-field appearance="outline" class="target">
+          <mat-label>Departure</mat-label>
+          <mat-icon matPrefix class="input-icon">location_on</mat-icon>
+          <input matInput name="departure" formControlName="departure">
+        </mat-form-field>
+        <mat-form-field>
+          <mat-label>Destination</mat-label>
+          <mat-icon matPrefix class="input-icon">flag</mat-icon>
+          <input matInput name="destination" formControlName="destination">
+        </mat-form-field>
+        <button mat-button type="submit" id="estimate-btn">Estimate</button>
+      </form>
     </div>
 
     <div class="params-part">
@@ -34,9 +37,9 @@
         <div></div>
         <mat-form-field appearance="outline" class="select-and-date">
           <mat-label>Car type</mat-label>
-          <mat-select>
-            <mat-option *ngFor="let food of foods" [value]="food.value">
-              {{food.viewValue}}
+          <mat-select [(value)]="vehicleType">
+            <mat-option *ngFor="let type of vehicleTypes" [value]="type.value">
+              {{type.viewValue}}
             </mat-option>
           </mat-select>
         </mat-form-field>
@@ -44,12 +47,12 @@
 
       <div class="param">
         <p>Pets</p>
-        <mat-checkbox color="primary"></mat-checkbox>
+        <mat-checkbox color="primary" [(ngModel)]="petsTransport"></mat-checkbox>
       </div>
 
       <div class="param">
         <p>Kids</p>
-        <mat-checkbox color="primary"></mat-checkbox>
+        <mat-checkbox color="primary" [(ngModel)]="babyTransport"></mat-checkbox>
       </div>
 
       <!-- <div class="param">
