Add calls to backend via service

--- a/src/app/components/user-account/driver-documents/driver-documents.component.html
+++ b/src/app/components/user-account/driver-documents/driver-documents.component.html
@@ -1,4 +1,6 @@
-<h2>Documents</h2>
-<!--<div *ngFor="let document of documents">
-    <p>{{document.name}}<a>{{document.picture}}</a></p>
-</div>-->
+<div class="alignDiv">
+    <h2>Documents</h2>
+    <div *ngFor="let document of documents">
+        <p>{{document.name}}:<a href="">{{document.documentImage}}</a></p>
+    </div>
+</div>
