--- a/src/app/components/user-account/driver-vechicle/driver-vechicle.component.css
+++ b/src/app/components/user-account/driver-vechicle/driver-vechicle.component.css
@@ -25,6 +25,7 @@
   .flex-elem2{
     width: 50%;
     padding-left: 4vh;
+    margin-top: 5vh;
   }
   
   .oneLine{
@@ -33,7 +34,7 @@
 
   button{
     position: absolute;
-    top: 88%;
+    top: 100%;
     left: 79%;background-color: black;
     color: white;
   }
@@ -49,4 +50,5 @@
       margin-left: auto;
       margin-right: auto;
     }
+
   }
