--- a/src/app/components/user-account/driver-vechicle/driver-vechicle.component.html
+++ b/src/app/components/user-account/driver-vechicle/driver-vechicle.component.html
@@ -4,7 +4,10 @@
         <img src="https://www.magazinauto.com/wp-content/uploads/2020/09/IMG_3305-e1600082024266-680x365.jpg" alt="vechiclePicture">
     </div>
     <div class="flex-elem2">
-        <form [formGroup]="changingInformationForm" class="oneElementPerRow">
+        <p>Car name: {{vehicle.model}}</p>
+        <p>Lisence plate: {{vehicle.licenseNumber}}</p>
+        <p>Passenger number: {{vehicle.passengerSeats}}</p>
+        <!--<form [formGroup]="changingInformationForm" class="oneElementPerRow">
 
             <mat-form-field class="oneLine">
                 <mat-label>Name</mat-label>
@@ -21,7 +24,7 @@
                 <input matInput type="number" name="numberOfSeats" formControlName="numberOfSeats" value={{vehicle.passengerSeats}}/>
             </mat-form-field>
             
-        </form>
+        </form>-->
         <p>Average mark: 4.5<mat-icon>star</mat-icon></p>
         <mat-checkbox labelPosition="before" [checked]="vehicle.babyTransport" class="oneLine">Baby seat available</mat-checkbox>
         <mat-checkbox labelPosition="before" [checked]="vehicle.petTransport" class="oneLine">Pets allowed</mat-checkbox>
