--- a/src/app/modules/layout/toolbar/toolbar.component.html
+++ b/src/app/modules/layout/toolbar/toolbar.component.html
@@ -8,7 +8,7 @@
     Log in
     <mat-icon>favorite</mat-icon>
   </button>
-  <button mat-button class="white-text" (click)="logout()" *ngIf="this.user.email != null">
+  <button mat-button class="white-text" routerLink="/" (click)="logout()" *ngIf="this.user.email != null">
     Log out
     <mat-icon>favorite</mat-icon>
   </button>
