--- a/src/app/modules/ride/current-ride/current-ride.component.css
+++ b/src/app/modules/ride/current-ride/current-ride.component.css
@@ -14,7 +14,7 @@
 h2 {
     margin-top: 2vh;
     font-size: x-large;
-    text-align: center;
+    padding-left: 2vh;
 }
 
 .app-ride-details-col-left {
@@ -27,6 +27,10 @@ h2 {
     width: 20%;
     display: inline-block;
     vertical-align: top;
+}
+
+p {
+    padding-left: 2vh;
 }
 
 p.app-ride-details {
@@ -58,6 +62,7 @@ button {
 #end-ride-btn {
     background-color: #24ED80 !important;
     color: black;
+    margin-top: 10vh !important;
 }
 
 #panic-ride-btn {
@@ -75,4 +80,8 @@ button {
     padding: 2vh;
     width: 90%;
     height: 70vh;
+}
+
+.mat-icon {
+    font-size: 0.85em;
 }
