--- a/src/app/modules/ride/ride-history/ride-history.component.html
+++ b/src/app/modules/ride/ride-history/ride-history.component.html
@@ -1,29 +1,44 @@
 <div class="app-ridehistory-page">
     <h2>Ride history</h2>
     <mat-divider></mat-divider>
-    <div class="grid">
-        <div *ngFor="let ride of rides">
-            <mat-card>
-                <mat-card-content>
-                    <div class="app-ride-details-col-left">
-                        <p class="app-ridehistory-location">Strazilovska 15, Novi Sad{{ride.locations[0].departure.address}}</p>
-                        <p class="app-ridehistory-time">11:30232{{ride.startTime}} </p>
-                        <p class="app-ridehistory-location">Mise Dimitrijevica 22, Novi Sad{{ride.locations[0].destination.address}}</p>
-                        <p class="app-ridehistory-time">22.21.2.2 11:0 {{ride.endTime}}</p>
-                        <p class="app-ridehistory-price">{{ride.totalCost}} RSD </p>
-                    </div>
-                    <div class="app-ride-details-col-right">
-                        <p class="app-ridehistory-user">Goran Goranovic{{ride.driver.email}}</p>
-                        <p class="app-ridehistory-time">driver</p>
-                        <img mat-card-sm-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" >
-                    </div>
-                </mat-card-content>
-                <mat-divider></mat-divider>
-                <mat-card-actions>
-                    <button mat-button (click)="viewRideDetails(ride)">VIEW MAP</button>
-                    <button mat-button >RIDE AGAIN</button>
-                  </mat-card-actions>
-              </mat-card>
-        </div>
-    </div>
+
+    <table
+        mat-table
+        [dataSource]="dataSource"
+        class="mat-elevation-z8"
+        matSort
+    >
+
+        <ng-container matColumnDef="departure">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Departure Location</th>
+            <td mat-cell *matCellDef="let element">
+                {{ element.locations[0].departure.address }}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="destination">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Destination Location</th>
+            <td mat-cell *matCellDef="let element">
+                {{ element.locations[0].destination.address }}
+            </td>
+        </ng-container>
+
+        <ng-container matColumnDef="startTime">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Ride Started At </th>
+            <td mat-cell *matCellDef="let element">{{ element.startTime }}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="endTime">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Ride Ended At</th>
+            <td mat-cell *matCellDef="let element">{{ element.endTime }}</td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+    
+    </table>
+    <mat-paginator
+        [pageSizeOptions]="[15, 25, 100]"
+        showFirstLastButtons
+    ></mat-paginator>
+
 </div>
