--- a/src/app/modules/ride/ride-history/ride-details-dialog/ride-details-dialog.component.css
+++ b/src/app/modules/ride/ride-history/ride-details-dialog/ride-details-dialog.component.css
@@ -4,42 +4,113 @@
     height: 50vh;
 }
 
-.app-ride-user-name {
-    font-size: 1em;
-    font-weight: 425;
+.app-ride-attribute {
+    font-size: 1.1em;
+    font-weight: 410;
+    margin-top: 1em;
     margin-bottom: 0 !important;
 }
 
-.app-ride-user-details {
+.app-ride-details {
     font-size: 0.9em;
     color: grey;
 }
 
-
-.mat-icon {
-    font-size: 0.85em;
+.grid { 
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(500px, 1fr));
+    grid-gap: 30px;
+    align-items: stretch;
 }
 
-.app-ride-passengers {
+
+.mat-icon {
+    font-size: 1em;
+}
+
+.app-ride-passengers, .app-ride-driver {
     padding-left: 2vw;
     margin-top: 4vh;
 }
 
 img {
     padding: 0;
-    margin-bottom: 3vh;
-    width: 35%;
-    height: 40%;
+    margin-left: 10px;
+    margin-top: 2vh;
+    width: 100%;
+    height: 100%;
 }
 
 .app-ride-details-col-left {
-    width: 60%;
+    width: 75%;
     display: inline-block;
     vertical-align: top;
     padding-left: 2vw;
 }
 .app-ride-details-col-right {
-    width: 30%;
+    width: 20%;
     display: inline-block;
     vertical-align: top;
+}
+
+h2{
+    font-size: 1.3em;
+    margin-bottom: 0vh !important;
+}
+
+.app-ride-review-comment {
+    margin-left: 2vw;
+    padding-left: 1vw;
+    font-style: italic;
+    border-left: 3px solid black;
+}
+
+span.rating {
+    font-style: italic;
+    font-size: 1.1em;
+    font-weight: 420;
+}
+
+p {
+    font-size: 1.1em;
+}
+
+#app-ride-passenger-picture, #app-ride-driver-picture {
+    width: 5%;
+    display: inline-block;
+    vertical-align: top;
+}
+
+#app-ride-passenger-name, #app-ride-driver-name {
+    width: 15%;
+    display: inline-block;
+    vertical-align: top;
+    padding-left: 2vw;
+    margin-right: 5vw;
+}
+
+#app-ride-passenger-reviewbtn {
+    width: 10%;
+    display: inline-block;
+    vertical-align: top;
+}
+
+button {
+    margin:auto !important;
+    display: flex;
+    justify-content: center;
+    vertical-align: middle;
+    margin-top: 2vh !important;
+    align-items: center;
+    width: 15vw;
+    height: 2.75em !important;
+    background-color: rgb(241, 241, 241) !important;
+}
+
+#btn-ride-again {
+    color:white !important;
+    background-color: black !important;
+    width: 30vw;
+    height: 2.5em;
+
 }
