--- a/src/app/modules/app-user/register-account/register-account.component.css
+++ b/src/app/modules/app-user/register-account/register-account.component.css
@@ -1,25 +1,29 @@
 form {
     margin: 55px;
+    padding-top: 10vh;
   }
 
-::ng-deep div.mat-grid-tile-content{
-    display: block !important;
-    margin: 5vw;
-  }
+img {
+  width: 100%;
+  height: 100%;
+  padding-top: 0%;
+  margin: 0% !important;
+}
 
 button {
     margin:auto !important;
-    margin-top: 5vh !important;
-    margin-bottom: 2vh !important;
+    margin-top: 10vh !important;
+    margin-bottom: 3vh !important;
     display: flex;
     justify-content: center;
     align-items: center;
     width: 24vw;
     height: 2.75em !important;
     background-color: black !important;
+    letter-spacing: 0.2em;
 }
 
-.app-reg-col > * {
+div.app-reg-col > * {
     width: 80% !important;
     margin-left: 4vw !important;
     margin-right: 4vw !important;
@@ -32,23 +36,41 @@ button {
 }
 
 .app-reg-instruction {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  margin: 0vh!important;
+}
+
+.app-reg-instruction > *{
+  text-align: center;
+  text-justify: initial;
+}
+
+.app-reg-instruction p {
+  font-size: 1.4em;
+  margin-bottom: 0vh !important;
+  letter-spacing: 0.3em;
+}
+
+.reg-header {
+  height: 30vh;
+  padding-bottom: 15vh;
 }
 
 h2 {
   margin-top: 10vh;
-  font-size: x-large;
+  font-size: 3em;
+  margin-bottom: 5vh;
+  line-height: 1.3em;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 button:hover {
   background-color: #6A7A9E !important;
 }
 
-.app-page-padding-bottom {
-  padding-bottom: 10vh;
-  display: block;
+.app-page {
+  padding-left: 12vw;
+  padding-right: 12vw;
+  padding-bottom: 20vh;
 }
 
 .app-form-sectioning mat-divider {
@@ -56,8 +78,27 @@ button:hover {
 }
 
 .app-form-sectioning p {
-  font-size: 1.2em;
-  font-weight: 425;
+  font-size: 1.4em;
+  font-weight: 100;
   margin-bottom: 0 !important;
   padding-bottom: 0.5vh;
+  letter-spacing: 0.2em;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+#already-have-account {
+  color: black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  letter-spacing: 0.1em;
+}
+
+::ng-deep .mat-form-field-appearance-outline .mat-form-field-outline {
+  color: #6A7A9E !important;
+}
+
+/* mat-label focused style */
+::ng-deep .mat-form-field.mat-focused .mat-form-field-label {
+    color: black !important ;
 }
