--- a/src/app/modules/ride/ride-history/ride-details-dialog/ride-details-dialog.component.html
+++ b/src/app/modules/ride/ride-history/ride-details-dialog/ride-details-dialog.component.html
@@ -1,4 +1,4 @@
-<div mat-dialog-content >
+<div mat-dialog-content id="dialog-container">
     <div class="app-ride-map-container">
         <app-map></app-map>
     </div>
