--- a/src/app/modules/app-user/register-account/register-account.component.html
+++ b/src/app/modules/app-user/register-account/register-account.component.html
@@ -25,6 +25,10 @@
               <mat-label>Phone Number</mat-label>
               <input matInput type="text" name="telephoneNumber" formControlName="telephoneNumber"/>
             </mat-form-field>
+            <mat-form-field>
+              <mat-label>Address</mat-label>
+              <input matInput type="text" name="address" formControlName="address"/>
+            </mat-form-field>
       </div>
       
       <div class="app-reg-col">
@@ -39,6 +43,10 @@
           <mat-form-field>
             <mat-label>Password</mat-label>
             <input matInput type="password" name="password" formControlName="password" />
+          </mat-form-field>
+          <mat-form-field>
+            <mat-label>Password</mat-label>
+            <input matInput type="password" name="confirmPassword" formControlName="confirmPassword" />
           </mat-form-field>
       </div>
       <div fxLayout="row" fxLayoutAlign="space-between end">
