--- a/src/app/modules/app-user/manage-change-request/manage-change-request.component.html
+++ b/src/app/modules/app-user/manage-change-request/manage-change-request.component.html
@@ -2,12 +2,12 @@
     <h2>Managing driver accounts</h2>
     <mat-divider></mat-divider>
     <div class="grid">
-        <div>
-            <mat-card (click)="viewRequest(0)">
-                <mat-card-header>
+        <div *ngFor="let request of changeRequestResponce.requestDTOS">
+            <mat-card>
+                <mat-card-header (click)="viewRequest(0)">
                     <div class="app-reg-col-name">
-                        <mat-card-title>Ime i prezime</mat-card-title>
-                        <mat-card-subtitle>11.111.111</mat-card-subtitle>
+                        <mat-card-title>{{request.userDTO.name}} {{request.userDTO.surname}}</mat-card-title>
+                        <mat-card-subtitle>requested: {{request.date}}</mat-card-subtitle>
                     </div>
                     <div class="app-reg-col-pic">
                         <img mat-card-sm-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" >
@@ -15,15 +15,15 @@
                   
                 </mat-card-header>
                 <mat-divider></mat-divider>
-                <mat-card-content>
-                    <p></p>
-                    <p></p>
+                <mat-card-content (click)="viewRequest(0)" class="padding-left">
+                    <p class="margin-top">Vehicle model: {{request.vehicleDTO.model}}</p>
+                    <p>Registration plate: {{request.vehicleDTO.licenseNumber}}</p>
                 </mat-card-content>
-                <mat-card-actions>
-                    <button mat-button>Accept</button>
-                    <button mat-button>View</button>
-                  </mat-card-actions>
-              </mat-card>
+                <mat-card-actions class="padding-left">
+                    <button class="black-button" mat-button (click)="acceptRequest(request)">Accept</button>
+                    <button class="gray-button" mat-button>View</button>
+                </mat-card-actions>
+            </mat-card>
         </div>
     </div>
 </div>
