--- a/src/app/modules/app-user/account/driver-vechicle/driver-vechicle.component.html
+++ b/src/app/modules/app-user/account/driver-vechicle/driver-vechicle.component.html
@@ -25,10 +25,9 @@
             </mat-form-field>
             
         </form>-->
-        <p>Average mark: 4.5<mat-icon>star</mat-icon></p>
         <mat-checkbox labelPosition="before" [checked]="vehicle.babyTransport" class="oneLine">Baby seat available</mat-checkbox>
         <mat-checkbox labelPosition="before" [checked]="vehicle.petTransport" class="oneLine">Pets allowed</mat-checkbox>
-        <button mat-raised-button onclick="submitChanges">Save changes</button>
+        <button *ngIf="isDriver" mat-raised-button onclick="submitChanges">Save changes</button>
        
     </div>
     
