--- a/src/app/modules/app-user/manage-drivers/manage-drivers.component.html
+++ b/src/app/modules/app-user/manage-drivers/manage-drivers.component.html
@@ -15,10 +15,10 @@
                         <mat-card-subtitle>driver</mat-card-subtitle>
                     </div>
                     <div class="app-reg-col-pic">
-                        <img mat-card-sm-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" >
+                        <img mat-card-sm-image src="https://images.unsplash.com/photo-1626397859727-6d15fb78d8ec?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8ZHJpdmVyfGVufDB8MnwwfHw%3D&auto=format&fit=crop&w=500&q=60"/>
                     </div>
-                  <mat-card-title-group>
-                </mat-card-title-group>
+                    <mat-card-title-group>
+                    </mat-card-title-group>
                 </mat-card-header>
                 <mat-divider></mat-divider>
                 <mat-card-content>
@@ -26,7 +26,7 @@
                     <p>{{acc.telephoneNumber}}</p>
                 </mat-card-content>
                 <mat-card-actions align="end">
-                    <button mat-button (click)="blockUser(acc.id)" >BLOCK</button>
+                    <button mat-button (click)="viewDetails(acc.id)">VIEW PROFILE DETAILS</button>
                   </mat-card-actions>
               </mat-card>
         </div>
