Fix routing and displaying components

--- a/src/app/modules/app-user/manage-drivers/account-details/driver-account-details/driver-account-details.component.html
+++ b/src/app/modules/app-user/manage-drivers/account-details/driver-account-details/driver-account-details.component.html
@@ -6,7 +6,7 @@
 
         <app-driver-vechicle></app-driver-vechicle>
         <app-driver-documents></app-driver-documents>
-        <button id="ride-history-button" mat-button [routerLink]="['../passenger-rides']">
+        <button id="ride-history-button" mat-button [routerLink]="['../ride-history']">
             Ride history
         </button>
     </div>
