Add components for managing passengers

--- a/src/app/modules/app-user/manage-passengers/manage-passengers.component.html
+++ b/src/app/modules/app-user/manage-passengers/manage-passengers.component.html
@@ -10,7 +10,7 @@
                         <mat-card-subtitle>passenger</mat-card-subtitle>
                     </div>
                     <div class="app-reg-col-pic">
-                        <img mat-card-sm-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" >
+                        <img mat-card-sm-image src="https://images.unsplash.com/photo-1518415692216-ce36b914890f?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NTJ8fHBlcnNvbnxlbnwwfDJ8MHx8&auto=format&fit=crop&w=600&q=60" >
                     </div>
                   <mat-card-title-group>
                 </mat-card-title-group>
@@ -21,7 +21,7 @@
                     <p>{{acc.telephoneNumber}}</p>
                 </mat-card-content>
                 <mat-card-actions align="end">
-                    <button mat-button (click)="blockUser(acc.id)" >BLOCK</button>
+                    <button mat-button (click)="viewDetails(acc.id)" >VIEW PROFILE DETAILS</button>
                   </mat-card-actions>
               </mat-card>
         </div>
