--- a/src/app/modules/app-user/manage-drivers/manage-drivers.component.css
+++ b/src/app/modules/app-user/manage-drivers/manage-drivers.component.css
@@ -55,3 +55,11 @@ a {
     color: black;
     text-decoration: none;
 }
+
+h2 {
+    margin-top: 10vh;
+    font-size: 2.3em;
+    margin-bottom: 5vh;
+    line-height: 1.3em;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  }
