--- a/src/app/modules/app-user/manage-passengers/manage-passengers.component.css
+++ b/src/app/modules/app-user/manage-passengers/manage-passengers.component.css
@@ -32,12 +32,6 @@ mat-card-title-group mat-card-title{
     vertical-align: bottom;
 }
 
-mat-card-actions button {
-    background-color: rgba(255, 70, 37, 0.941);
-    color: white;
-    margin-right: 4vw;
-}
-
 mat-card-actions {
     padding-right: 5px;
 }
@@ -54,3 +48,18 @@ a {
     color: black;
     text-decoration: none;
 }
+
+button {
+    background-color: rgb(249, 249, 249);
+    color: rgb(43, 43, 43);
+    margin-bottom: 2vh;
+    width: 100%;
+}
+
+h2 {
+    margin-top: 10vh;
+    font-size: 2.3em;
+    margin-bottom: 5vh;
+    line-height: 1.3em;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  }
